# assignment_1_public

./: README.md  pyproject.toml
src/ie_bike_model/: __init__.py  model.py
