[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ie_bike_model"
author = "Oxana Pangina"
author-email = "oxana.pangina@student.ie.edu"
home-page = "https://github.com/opanvas"
description-file = "README.md"
requires = ["pandas","scikit-learn","joblib","numpy"]